# Stardew_Valley_Chatbot

./: .gitignore  README.md  app.py  cloudbuild.yaml  index.html  pyproject.toml  run_evals.py
evals/: conftest.py  test_golden.py  test_rubric.py  test_rules.py
